fix overflow

--- a/frontend/src/components/content/content-item.styles.less
+++ b/frontend/src/components/content/content-item.styles.less
@@ -5,6 +5,8 @@
 .ant-list-item {
   padding-left: 1rem !important;
   padding-right: 1rem !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .open-revisions-button {
